{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 76,
  "lineage": "aa0f9d79-c5d7-e860-33ac-294dd0b85def",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:584860322364:instance/i-0609b3fc605ccd65a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0609b3fc605ccd65a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0405d4f25d7c976f5",
            "private_dns": "ip-192-168-10-10.us-east-2.compute.internal",
            "private_ip": "192.168.10.10",
            "public_dns": "ec2-18-222-109-20.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.109.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b066a5dc6e2f93a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2ded9f22fc8d577",
            "tags": {
              "Environment": "development",
              "Name": "Server 1"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Server 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ec10110e6275a072"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_1",
            "aws_vpc.latam",
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_security_group.sg_route_allow_http_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:584860322364:instance/i-0151431bca9bf6bd5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0151431bca9bf6bd5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fea5b3b2e2542840",
            "private_dns": "ip-192-168-10-11.us-east-2.compute.internal",
            "private_ip": "192.168.10.11",
            "public_dns": "ec2-13-58-211-195.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.211.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cd944688bfdefaf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2ded9f22fc8d577",
            "tags": {
              "Environment": "development",
              "Name": "Server 2"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "Server 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ec10110e6275a072"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.deployer",
            "aws_security_group.sg_route_allow_http_ssh",
            "aws_subnet.subnet_1",
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:internet-gateway/igw-06b94b1c7b98b768d",
            "id": "igw-06b94b1c7b98b768d",
            "owner_id": "584860322364",
            "tags": {
              "Name": "Internet GW VPC Latam"
            },
            "tags_all": {
              "Name": "Internet GW VPC Latam"
            },
            "vpc_id": "vpc-0d3793805b045ff48"
          },
          "dependencies": [
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:route-table/rtb-00b2ad9bccccadf24",
            "id": "rtb-00b2ad9bccccadf24",
            "owner_id": "584860322364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b94b1c7b98b768d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route for web applications "
            },
            "tags_all": {
              "Name": "Public route for web applications "
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3793805b045ff48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018fd95c4fa6a8397",
            "route_table_id": "rtb-00b2ad9bccccadf24",
            "subnet_id": "subnet-0a2ded9f22fc8d577"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web_public",
            "aws_subnet.subnet_1",
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0706bb78197ba1dc7",
            "route_table_id": "rtb-00b2ad9bccccadf24",
            "subnet_id": "subnet-0c66688da7cb0b30f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web_public",
            "aws_subnet.subnet_2",
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e096dfca3879bd40",
            "route_table_id": "rtb-00b2ad9bccccadf24",
            "subnet_id": "subnet-0593887084b951a8a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web_public",
            "aws_subnet.subnet_3",
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_route_allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:security-group/sg-0ec10110e6275a072",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec10110e6275a072",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "route53_allow_http_ssh_apache",
            "name_prefix": "",
            "owner_id": "584860322364",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3793805b045ff48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:subnet/subnet-0a2ded9f22fc8d577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-0a2ded9f22fc8d577",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584860322364",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0d3793805b045ff48"
          },
          "dependencies": [
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:subnet/subnet-0c66688da7cb0b30f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.20.0/24",
            "id": "subnet-0c66688da7cb0b30f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584860322364",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0d3793805b045ff48"
          },
          "dependencies": [
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:subnet/subnet-0593887084b951a8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.30.0/24",
            "id": "subnet-0593887084b951a8a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584860322364",
            "tags": {
              "Name": "Subnet-3"
            },
            "tags_all": {
              "Name": "Subnet-3"
            },
            "vpc_id": "vpc-0d3793805b045ff48"
          },
          "dependencies": [
            "aws_vpc.latam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "latam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:vpc/vpc-0d3793805b045ff48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0dcd8906565789b99",
            "default_route_table_id": "rtb-03c44f30cdf065b69",
            "default_security_group_id": "sg-038264976f956bf91",
            "dhcp_options_id": "dopt-78c6a313",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d3793805b045ff48",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03c44f30cdf065b69",
            "owner_id": "584860322364",
            "tags": {
              "Location": "US",
              "Name": "VPC LATAM"
            },
            "tags_all": {
              "Location": "US",
              "Name": "VPC LATAM"
            }
          }
        }
      ]
    }
  ]
}